Refactor : 베이스코드 참고하여 리펙토링