@@ -14,8 +14,10 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 
 @RequiredArgsConstructor
 @RequestMapping("/api/message")
@@ -35,12 +37,20 @@ public class MessageController {
             @RequestPart(value = "attachments", required = false) List<MultipartFile> attachments
     ) {
         List<BinaryContentCreateRequest> binaryRequests = Optional.ofNullable(attachments)
-                .orElse(Collections.emptyList())
-                .stream()
-                .map(this::toOptionalBinaryContentRequest)
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .collect(Collectors.toList());
+                .map(files -> files.stream()
+                        .map(file -> {
+                            try {
+                                return new BinaryContentCreateRequest(
+                                        file.getOriginalFilename(),
+                                        file.getBytes(),
+                                        file.getContentType()
+                                );
+                            } catch (IOException e) {
+                                throw new RuntimeException(e);
+                            }
+                        })
+                        .toList())
+                .orElse(new ArrayList<>());
         Message message = messageService.create(messageCreateRequest, binaryRequests);
         return ResponseEntity.status(HttpStatus.CREATED).body(message);
     }
@@ -50,7 +60,7 @@ public class MessageController {
             , method = RequestMethod.PUT)
     @ResponseBody
     public ResponseEntity<Message> update(
-            @RequestParam("id") UUID messageId,
+            @RequestParam("messageId") UUID messageId,
             @RequestBody MessageUpdateRequest messageUpdateRequest
     ) {
         Message updated = messageService.update(messageId, messageUpdateRequest);
@@ -62,41 +72,20 @@ public class MessageController {
             , method = RequestMethod.DELETE)
     @ResponseBody
     public ResponseEntity<Void> delete(
-            @RequestParam("id") UUID messageId
+            @RequestParam("messageId") UUID messageId
     ) {
         messageService.delete(messageId);
         return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
     }
 
     // 특정 채널 메시지 목록 조회
-    @RequestMapping(path = "/find-all-by-channel"
+    @RequestMapping(path = "/findAllByChannelId"
             , method = RequestMethod.GET)
     @ResponseBody
-    public ResponseEntity<List<Message>> findAllByChannel(
+    public ResponseEntity<List<Message>> findAllByChannelId(
             @RequestParam("channelId") UUID channelId
     ) {
         List<Message> messages = messageService.findAllByChannelId(channelId);
         return ResponseEntity.status(HttpStatus.OK).body(messages);
-    }
-
-    // MultipartFile 타입의 요청값을 BinaryContentCreateRequest 타입으로 변경하기 위한 메서드
-    private Optional<BinaryContentCreateRequest> toOptionalBinaryContentRequest(MultipartFile profile) {
-
-        if (profile.isEmpty()) {
-            // 컨트롤러가 요청받은 파라미터 중 MultipartFile 타입의 데이터가 비어있다면:
-            return Optional.empty();
-        } else {
-            // 컨트롤러가 요청받은 파라미터 중 MultipartFile 타입의 데이터가 존재한다면:
-            try {
-                BinaryContentCreateRequest binaryContentCreateRequest = new BinaryContentCreateRequest(
-                        profile.getOriginalFilename(),
-                        profile.getBytes(),
-                        profile.getContentType()
-                );
-                return Optional.of(binaryContentCreateRequest);
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        }
     }
 }
